# simple-STORM

./: .gitignore  CMakeLists.txt  INSTALL  Licence.txt  README.md  README.txt
cmake/: FindFFTW.cmake  FindR.cmake  FindRudeConfig.cmake  ResourceCompiler.cmake
colorcomposer/: ausgabe.txt.npz  beadLocalisationVariance.py  colocalizationDetection.py  combineImagesByTrafo.py  combinedbsp1.txt  combinedbsp1.txt.npz  coords.py  main.py  main.py~  main2.py  mainwindow.ui  mainwindowstructureanalysis.cpp  mainwindowstructureanalysis.h  mainwindowstructureanalysis.ui  phenotypeColocalization.py  structureAnalysis.py  transformcontroller.py  transformed.txt.npz  transformed2.txt  transformed2.txt.npz  ui_mainwindow.py  ui_mainwindowstructureanalysis.py  worker.py  xcgg.txt
doc/: doc.tex  literature.bib  unsrtnat_custom.bst
gui/: CMakeLists.txt  Info.plist.in  MacBundle.sh.in  advancedsettingsgroupbox.ui  analysisworker.cpp  analysisworker.h  backgroundlevelgroupbox.ui  filenamelineedit.cpp  filenamelineedit.h  globals.cpp  globals.h  guiparams.cpp  guiparams.h  inputwidget.cpp  inputwidget.h  inputwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindowwidget.cpp  mainwindowwidget.h  mainwindowwidget.ui  optionwidget.cpp  optionwidget.h  optionwidget.ui  previewimage.cpp  previewimage.h  previewscrollarea.cpp  previewscrollarea.h  previewwidget.cpp  previewwidget.h  previewwidget.ui  resultwidget.cpp  resultwidget.h  resultwidget.ui  version.h.in  zoomablescrollarea.cpp  zoomablescrollarea.h
gui/icons/: StormIcon.icns  icons.qrc
storm/: CMakeLists.txt  README.txt  dataparams.cpp  dataparams.h  myimportinfo.cpp  myimportinfo.h  program_options_getopt.cpp  storm.cpp  storm_fit.R  stormparams.cpp  stormparams.h  util.cpp  version.h.in  wienerStorm.cpp  wienerStorm.hxx
storm/test/: CMakeLists.txt  run_test.sh.in
tests/: CMakeLists.txt  storm_fit.R  storm_fit.h  test.cpp  test.hdf5  test.tif
util/: CMakeLists.txt
